<resources>
    <string name="app_name">STABUS</string>
    <string name="sub_name">Start Your Business</string>

    <!-- Fragment tags BK-->
    <string name="BahanBaku">BAHAN BAKU</string>
    <string name="HargaBahanBaku">HARGA BAHAN BAKU</string>
    <string name="TambahBahan">TAMBAH BAHAN BAKU</string>
    <string name="TambahHarga">TAMBAH HARGA</string>
    <string name="UbahHarga">UBAH HARGA</string>
    <string name="UbahBahan">UBAH BAHAN</string>

    <string name="Produk">PRODUK</string>
    <string name="TambahProduk">TAMBAH PRODUK</string>

    <string name="Kalkulator">KALKULATOR</string>
    <string name="KalkulatorPilihProduk">KALKULATOR PILIH PRODUK</string>
    <string name="KalkulatorSetHarga">PILIH HARGA</string>
    <string name="KalkulatorSetKemasan">MASUKAN KEMASAN</string>
    <string name="KalkulatorSetKebutuhan">MASUKAN KEBUTUHAN OPERASIONAL</string>
    <string name="KalkulatorSetMargin">TENTUKAN MARGIN HARGA</string>
    <string name="KalkulatorGetHarga">HARGA JUAL</string>

    <string name="Riwayat">RIWAYAT</string>

    <!-- Bundle tags BK-->
    <string name="selectedId">selected_id</string>
    <string name="selectedNama">selected_nama</string>
    <string name="selectedKategori">selected_kategori</string>

    <!-- Bundle tags BK-->
    <string name="tambahNama">tambah_nama</string>
    <string name="tambahMerk">tambah_merk</string>
    <string name="tambahIsi">tambah_tempat</string>
    <string name="tambahSatuan">tambah_satuan</string>
    <string name="tambahTempat">tambah_tempat</string>
    <string name="tambahHarga">tambah_harga</string>


    <string name="getIDBahan">get_id_bahan</string>
    <string name="getIDHarga">get_id_harga</string>
    <string name="getNama">get_nama</string>
    <string name="getMerk">get_merk</string>
    <string name="getIsi">get_isi</string>
    <string name="getSatuan">get_satuan</string>
    <string name="getTempat">get_tempat</string>
    <string name="getHarga">get_harga</string>


    <string name="Komponen1">Tenaga Kerja</string>
    <string name="Komponen2">Biaya Operasional</string>
    <string name="Komponen3">Resiko</string>
    <string name="Komponen4">Keuntungan</string>
    <string name="Komponen5">Marketing</string>

    <string name="TESTSTRING">DATA STRING</string>
    <string name="selanjutnya">SELANJUTNYA</string>
    <string name="harga_pokok_produksi">HARGA POKOK PRODUKSI</string>
    <string name="margin">MARGIN</string>
    <string name="harga_jual_minimum">HARGA JUAL MINIMUM</string>
    <string name="ok">OK</string>
    <string name="dapatkan_harga">DAPATKAN HARGA</string>
    <string name="tambah_kebutuhan">TAMBAH KEBUTUHAN</string>
    <string name="hint_nama_kebutuhan">Nama Kebutuhan</string>
    <string name="hint_harga">Harga</string>

    <string name="credit">CREDIT</string>
    <string name="mppl_team_unikom_2019">MPPL Team @UNIKOM 2019</string>
    <string name="rumus_perhitungan_harga_diambil_dari">Rumus Perhitungan Harga Diambil Dari</string>
    <string name="the_source_code_can_be_access_at">The Source Code can be access at</string>
    <string name="github_com_haniialfiyyaah_stabusv2">github.com/haniialfiyyaah/STABUSv2</string>
    <string name="fimela_com">Fimela.com</string>


</resources>
