<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/credit_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryLight"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    app:behavior_peekHeight="45dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/credit"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/backgroundColor"
        android:padding="5dp"
        android:background="@color/colorPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mppl_team_unikom_2019"
        android:textColor="@color/backgroundColor"
        android:textAlignment="center"
        android:padding="5dp"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rumus_perhitungan_harga_diambil_dari"
        android:textColor="@color/backgroundColor"
        android:padding="5dp"
        android:textAlignment="center"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fimela_com"
        android:textStyle="italic"
        android:textColor="@color/backgroundColor"
        android:padding="5dp"
        android:textAlignment="center"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/the_source_code_can_be_access_at"
        android:textColor="@color/backgroundColor"
        android:textAlignment="center"
        android:padding="5dp"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/github_com_haniialfiyyaah_stabusv2"
        android:textStyle="italic"
        android:textColor="@color/backgroundColor"
        android:padding="5dp"
        android:textAlignment="center"
        android:textSize="18sp"/>

</LinearLayout>