<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="?android:attr/actionBarSize"
                android:text="@string/KalkulatorGetHarga"
                android:gravity="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/lightgray"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Produk"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/tvProduk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TESTSTRING"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="5dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/harga_pokok_produksi"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/tvHPP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TESTSTRING"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="5dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/margin"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/tvMargin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TESTSTRING"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="5dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/harga_jual_minimum"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/tvHitung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TESTSTRING"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/tvHargaJual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TESTSTRING"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textColor="@android:color/holo_green_dark"
                />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_gravity="bottom"
        android:text="@string/ok" />

</android.support.design.widget.CoordinatorLayout>