<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:id="@+id/APPNAME"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="60sp"
            android:textStyle="bold"
            android:paddingTop="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_alignEnd="@id/APPNAME"
            android:layout_below="@id/APPNAME"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_name"
            android:textStyle="bold|italic"
            android:layout_marginTop="-15dp"
            android:layout_gravity="center_horizontal"/>
    </RelativeLayout>



    <android.support.v7.widget.AppCompatButton
        android:id="@+id/openProduk"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:background="@drawable/selector_cardview"
        android:text="@string/Kalkulator"
        android:drawableTop="@drawable/ic_iconfinder_general_office_20_3592863"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark"/>

    <include layout="@layout/layout_credit"/>
</android.support.design.widget.CoordinatorLayout>