<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/tv"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:text="@string/KalkulatorSetMargin"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:background="@drawable/shape_outside_line"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/tvProdukName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/TESTSTRING"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/tvJmlProduk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/TESTSTRING"
                        android:textSize="15sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightgray"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/harga_pokok_produksi"
                        android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/tvHPP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/TESTSTRING"
                        android:textStyle="bold"
                        android:textSize="18sp"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/lightgray"
                android:layout_margin="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Komponen1"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/tvKomponen1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TESTSTRING"
                    android:textSize="12sp"/>
                <SeekBar
                    android:id="@+id/komponen1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:max="10"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Komponen2"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/tvKomponen2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TESTSTRING"
                    android:textSize="12sp"/>
                <SeekBar
                    android:id="@+id/komponen2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:max="10"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Komponen3"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/tvKomponen3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TESTSTRING"
                    android:textSize="12sp"/>
                <SeekBar
                    android:id="@+id/komponen3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:max="1"
                    android:progress="1"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Komponen4"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/tvKomponen4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TESTSTRING"
                    android:textSize="12sp"/>
                <SeekBar
                    android:id="@+id/komponen4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:max="20"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Komponen5"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/tvKomponen5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TESTSTRING"
                    android:textSize="12sp"/>
                <SeekBar
                    android:id="@+id/komponen5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:max="40"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>



    <LinearLayout
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:gravity="center"
        android:padding="5dp"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/selector_rec">
        <TextView
            android:id="@+id/marginHarga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TESTSTRING"
            android:textStyle="bold"
            android:textColor="@color/backgroundColor"
            android:textSize="18sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@color/lightgray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dapatkan_harga"
            android:textColor="@color/backgroundColor"
            android:textSize="12sp"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>